--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 /* Load Bootstrap First */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "main.css";
+@import "logins.css";
 /* Other styles after Bootstrap */
 @import "global.css";
 /* Custom styles after Bootstrap */
